# lightgbm-rs

./: .gitmodules  Cargo.toml
lightgbm-sys/: Cargo.toml  build.rs
src/: booster.rs  dataset.rs  error.rs
