[package]
edition = "2021"
name = "lightgbm"
version = "0.2.4"
authors = ["vaaaaanquish <6syun9@gmail.com>", "Craig Radcliffe <craig.radcliffe@tonal.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm-sys = { path = "lightgbm-sys", default-features = false, version = "0.3.0" }
libc = { version = "0.2.81", default-features = false }
serde_json = "1.0.59"
polars = {version = "0.16.0", optional = true}


[features]
default = ["runtime"]
dataframe = ["polars"]
static = ["lightgbm-sys/static"]
runtime = ["lightgbm-sys/runtime"]
